--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
   <body>
     <%= render 'layouts/header' %>
     <div class="container">
-      <%= yield %> <%= render 'layouts/footer' %>
+      <%= yield %> <%= render 'layouts/footer' %> <%= debug(params) if Rails.env.development? %>
     </div>
   </body>
 </html>
