--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,21 +2,21 @@
   <div class="container">
     <%= link_to "sample app", root_path, id: "logo" %>
     <nav>
-      <ul class="nav navbar navbar-right">
-        <li><%= link_to "Home", root_path %></li>
-        <li><%= link_to "Help", help_path %></li>
+      <ul class="nav navbar-dark bg-dark navbar-right">
+        <li><%= link_to "Home", root_path, class: "navbar-link" %></li>
+        <li><%= link_to "Help", help_path, class: "navbar-link" %></li>
         <% if logged_in? %>
-          <li><%= link_to "Users", "#"%></li>
+          <li><%= link_to "Users", "#", class: "navbar-link" %></li>
           <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+            <a class="navbar-link" href="#" class="dropdown-toggle" data-toggle="dropdown">
               Account <b class="caret"></b>
             </a>
             <ul class="dropdown-menu">
-              <li><%= link_to "Profile", current_user %></li>
-              <li><%= link_to "Settings", edit_user_path(current_user) %></li>
+              <li><%= link_to "Profile", current_user, class: "dropbown-item" %></li>
+              <li><%= link_to "Settings", edit_user_path(current_user), class: "dropbown-item" %></li>
               <li class="divider"></li>
               <li>
-                <%= link_to "Log out", logout_path, method: "delete" %>
+                <%= link_to "Log out", logout_path, method: "delete", class: "dropbown-item" %>
               </li>
             </ul>
           </li>
