--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,7 +6,7 @@
         <li><%= link_to "Home", root_path, class: "navbar-link" %></li>
         <li><%= link_to "Help", help_path, class: "navbar-link" %></li>
         <% if logged_in? %>
-          <li><%= link_to "Users", "#", class: "navbar-link" %></li>
+          <li><%= link_to "Users", users_path, class: "navbar-link" %></li>
           <li class="dropdown">
             <a class="navbar-link" href="#" class="dropdown-toggle" data-toggle="dropdown">
               Account <b class="caret"></b>
