--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,4 +1,7 @@
 <li>
-    <%= gravatar_for user, size: 50 %>
+    <%= gravatar_for user %>
     <%= link_to user.name, user %>
+    <% if current_user.admin? && !current_user?(user) %>
+        <%= button_to "delete", user, method: :delete, class: "btn btn-danger delete-user-button" %>
+    <% end %>
 </li>
